feat(optional-form): Expose optional form and default form decision in response
